Added dark mode + small bug fixes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 <div class="container-about">
   <div class="center">
     <div class="d-flex align-items-start bg-white mb-3">
-      <div>
+      <div class="paragraph-container">
         <h2 class="about-header">About This Website</h2>
         <p class="paragraph text-size">
           PierreAnalytics is a website that provides a variety of advanced NHL
@@ -18,8 +18,7 @@
         <div style="display: flex; justify-content: center">
           <a
             href="https://github.com/neilpl24/pierreanalyticsource"
-            target="_blank"
-          >
+            target="_blank">
             <div class="github-link">
               <img class="github-img" src="assets/github.png" alt="github" />
             </div>
@@ -34,8 +33,7 @@
         <img
           src="assets/neil-alt.png"
           class="masked-image"
-          alt="Fissure in Sandstone"
-        />
+          alt="Fissure in Sandstone" />
         <ul class="text-size">
           <li>
             I am a Software Developer for the Baseball Research and Development
@@ -56,8 +54,7 @@
         <img
           src="assets/bennett-alt.jpg"
           class="masked-image"
-          alt="bennett card mask"
-        />
+          alt="bennett card mask" />
         <ul class="text-size">
           <li>
             I'm an aspiring full-stack software engineer based out of Chicago,
@@ -89,31 +86,31 @@
             <img
               src="assets/neil.jpg"
               class="small card-img-top"
-              alt="Fissure in Sandstone"
-            />
+              alt="Fissure in Sandstone" />
             <h2 class="card-title">Contact Neil</h2>
             <p class="card-text">
-              <i class="fas fa-envelope"></i> neilpierre24@gmail.com
+              <i class="fas fa-envelope"></i>
+              neilpierre24@gmail.com
             </p>
             <div class="card-text social-icons">
               <a
                 href="https://www.linkedin.com/in/neil-pierre-louis/"
-                target="_blank"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-              <a href="https://twitter.com/pierreanalytics" target="_blank"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="https://github.com/neilpl24" target="_blank"
-                ><i class="fab fa-github"></i
-              ></a>
+                target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="https://twitter.com/pierreanalytics" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://github.com/neilpl24" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
             </div>
             <a
               href="assets/resumes/Neil_Pierre-Louis_Resume.pdf"
               download
-              class="btn btn-primary"
-              >Download Resume</a
-            >
+              class="btn btn-primary">
+              Download Resume
+            </a>
           </div>
         </div>
       </div>
@@ -123,49 +120,49 @@
             <img
               src="assets/bennett.jpg"
               class="small card-img-top"
-              alt="Bennett Contact Card"
-            />
+              alt="Bennett Contact Card" />
             <h2 class="card-title">Contact Bennett</h2>
             <p class="card-text">
-              <i class="fas fa-envelope"></i> bennettsummy@gmail.com
+              <i class="fas fa-envelope"></i>
+              bennettsummy@gmail.com
             </p>
             <div class="card-text social-icons">
               <a
                 href="https://www.linkedin.com/in/bennett-summy/"
-                target="_blank"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-              <a href="https://twitter.com/BennettSummy" target="_blank"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="https://github.com/bsummy" target="_blank"
-                ><i class="fab fa-github"></i
-              ></a>
+                target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="https://twitter.com/BennettSummy" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://github.com/bsummy" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
             </div>
             <a
               href="assets/resumes/Bennett_Summy_Resume.pdf"
               download
-              class="btn btn-primary"
-              >Download Resume</a
-            >
+              class="btn btn-primary">
+              Download Resume
+            </a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="d-flex align-items-start bg-white mb-3">
-      <div>
+      <div class="paragraph-container">
         <h2 class="about-header">Data</h2>
         <p class="text-size">
           All data is sourced from the NHL's API. Unofficial API docs can be
           found
           <a
             href="https://github.com/Zmalski/NHL-API-Reference"
-            target="_blank"
-          >
-            here</a
-          >. All advanced stat calculations are performed by Neil and uploaded
-          to a SQL database that this website pulls from. This website is an
+            target="_blank">
+            here
+          </a>
+          . All advanced stat calculations are performed by Neil and uploaded to
+          a SQL database that this website pulls from. This website is an
           Angular frontend with an Express JS backend that pulls from a SQLite3
           database. All player card statistics are calculated as a rate (per/60)
           and are percentile based.
@@ -174,7 +171,7 @@
     </div>
 
     <div class="d-flex align-items-start bg-white mb-3">
-      <div>
+      <div class="paragraph-container">
         <h2 class="about-header">Glossary</h2>
         <div class="table-container">
           <table>
