--- a/src/app/leaderboard/leaderboard.component.scss
+++ b/src/app/leaderboard/leaderboard.component.scss
@@ -5,6 +5,8 @@
   align-items: center;
   gap: 20px;
   padding: 10px;
+  background-color: var(--bgColor);
+  color: var(--textColor);
 
   .header-title {
     font-size: 20px;
