--- a/src/app/cards/gamescore/gamescore.component.scss
+++ b/src/app/cards/gamescore/gamescore.component.scss
@@ -15,7 +15,7 @@
 }
 
 .stats-box {
-  background: white;
+  background: var(--bgColor);
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 8px 16px;
