--- a/src/app/cards/table/table.component.html
+++ b/src/app/cards/table/table.component.html
@@ -4,15 +4,13 @@
       mat-table
       class="table table-hover align-middle mb-0 bg-white table-bordered border-secondary"
       [dataSource]="dataSource"
-      matSort
-    >
+      matSort>
       <ng-container matColumnDef="goalie" class="hide-on-mobile">
         <th
           mat-header-cell
           *matHeaderCellDef
           mat-sort-header="goalie"
-          class="left hide-on-mobile"
-        >
+          class="left hide-on-mobile">
           Goalie
         </th>
         <td mat-cell *matCellDef="let shot" class="left">
@@ -24,13 +22,11 @@
         <td mat-cell *matCellDef="let shot" class="left" style="width: 20%">
           <img
             src="{{ 'assets/teams/' + shot.away_team + '.png' }}"
-            class="logo"
-          />
+            class="logo" />
           {{ shot.away_goals }}-{{ shot.home_goals }}
           <img
             src="{{ 'assets/teams/' + shot.home_team + '.png' }}"
-            class="logo"
-          />
+            class="logo" />
         </td>
       </ng-container>
       <ng-container matColumnDef="strength" class="hide-on-mobile">
@@ -38,8 +34,7 @@
           mat-header-cell
           *matHeaderCellDef
           mat-sort-header="strength"
-          class="left"
-        >
+          class="left">
           Strength
         </th>
         <td mat-cell *matCellDef="let shot" class="left">
@@ -51,8 +46,7 @@
           mat-header-cell
           *matHeaderCellDef
           mat-sort-header="type"
-          class="left"
-        >
+          class="left">
           Type
         </th>
         <td mat-cell *matCellDef="let shot" class="left">
@@ -66,16 +60,14 @@
           mat-sort-header="xG"
           class="left"
           [matTooltip]="getTooltip('xg')"
-          matTooltipPosition="above"
-        >
+          matTooltipPosition="above">
           xG
         </th>
         <td
           mat-cell
           *matCellDef="let shot"
           class="left"
-          [ngStyle]="getBkgColor(this.roundValue(shot.xG))"
-        >
+          [ngStyle]="getBkgColor(this.roundValue(shot.xG))">
           {{ this.roundValue(shot.xG) }}
         </td>
       </ng-container>
@@ -84,16 +76,14 @@
           mat-header-cell
           *matHeaderCellDef
           mat-sort-header="link"
-          class="left"
-        >
+          class="left">
           Video Link
         </th>
         <td
           mat-cell
           *matCellDef="let shot"
           class="left"
-          style="width: 20%; max-width: 0"
-        >
+          style="width: 20%; max-width: 0">
           <ng-container *ngIf="shot.Link == 'No link found.'">
             <p>No link found.</p>
           </ng-container>
@@ -101,30 +91,35 @@
             <a
               href="javascript:void(0)"
               (click)="redirectToLink(shot.Link)"
-              target="_blank"
-              >Link</a
-            >
+              target="_blank">
+              Link
+            </a>
           </ng-container>
         </td>
       </ng-container>
       <tr
         mat-header-row
-        *matHeaderRowDef="['goalie', 'score', 'strength', 'type', 'xG', 'link']"
-      ></tr>
+        *matHeaderRowDef="[
+          'goalie',
+          'score',
+          'strength',
+          'type',
+          'xG',
+          'link'
+        ]"></tr>
       <tr
         mat-row
         *matRowDef="
           let shot;
           columns: ['goalie', 'score', 'strength', 'type', 'xG', 'link']
-        "
-      ></tr>
+        "></tr>
     </table>
     <mat-paginator
+      class="background"
       [pageSize]="10"
       [pageSizeOptions]="[10, 25, 50]"
       [length]="dataSource.data.length"
-      showFirstLastButtons
-    ></mat-paginator>
-    <ng-template #emptyState> </ng-template>
+      showFirstLastButtons></mat-paginator>
+    <ng-template #emptyState></ng-template>
   </div>
 </div>
