--- a/src/app/leaderboard/goalies/goalies.component.html
+++ b/src/app/leaderboard/goalies/goalies.component.html
@@ -3,9 +3,8 @@
   class="table-data table-hover table-bordered border-secondary"
   [dataSource]="dataSource"
   matSort
-  (matSortChange)="onSortChange($event)"
->
-  <caption>
+  (matSortChange)="onSortChange($event)">
+  <caption class="background">
     Hover over the column names for more info.
   </caption>
   <ng-container matColumnDef="name">
@@ -13,8 +12,7 @@
       mat-header-cell
       *matHeaderCellDef
       mat-sort-header="lastName"
-      class="left"
-    >
+      class="left">
       Name
     </th>
     <td mat-cell *matCellDef="let player" class="left">
@@ -25,8 +23,7 @@
               player.playerID +
               '.png'
           }}"
-          class="logo row"
-        />
+          class="logo row" />
         <div class="row text-size">
           {{ player.firstName }} {{ player.lastName }}
         </div>
@@ -46,8 +43,7 @@
         <div class="logo-div">
           <img
             src="{{ 'assets/teams/' + player.team + '.png' }}"
-            class="logo row"
-          />
+            class="logo row" />
           <div class="row text-size">{{ player.team }}</div>
         </div>
       </a>
@@ -59,16 +55,14 @@
       *matHeaderCellDef
       mat-sort-header="lowDanger"
       [matTooltip]="getTooltip('lowDanger')"
-      matTooltipPosition="above"
-    >
+      matTooltipPosition="above">
       Low Danger
     </th>
     <td
       mat-cell
       *matCellDef="let player"
       [ngStyle]="getCellColors(player.lowDanger, 'lowDanger')"
-      class="small-column"
-    >
+      class="small-column">
       {{ player.lowDanger | number : "1.2-2" }}
     </td>
   </ng-container>
@@ -78,16 +72,14 @@
       *matHeaderCellDef
       mat-sort-header="medDanger"
       [matTooltip]="getTooltip('medDanger')"
-      matTooltipPosition="above"
-    >
+      matTooltipPosition="above">
       Med Danger
     </th>
     <td
       mat-cell
       *matCellDef="let player"
       [ngStyle]="getCellColors(player.medDanger, 'medDanger')"
-      class="small-column"
-    >
+      class="small-column">
       {{ player.medDanger | number : "1.2-2" }}
     </td>
   </ng-container>
@@ -97,16 +89,14 @@
       *matHeaderCellDef
       mat-sort-header="highDanger"
       [matTooltip]="getTooltip('highDanger')"
-      matTooltipPosition="above"
-    >
+      matTooltipPosition="above">
       High Danger
     </th>
     <td
       mat-cell
       *matCellDef="let player"
       [ngStyle]="getCellColors(player.highDanger, 'highDanger')"
-      class="small-column"
-    >
+      class="small-column">
       {{ player.highDanger | number : "1.2-2" }}
     </td>
   </ng-container>
@@ -116,16 +106,14 @@
       *matHeaderCellDef
       mat-sort-header="gsax"
       [matTooltip]="getTooltip('gsax')"
-      matTooltipPosition="above"
-    >
+      matTooltipPosition="above">
       GSAx
     </th>
     <td
       mat-cell
       *matCellDef="let player"
       [ngStyle]="getCellColors(player.gsax, 'gsax')"
-      class="small-column"
-    >
+      class="small-column">
       {{ player.gsax | number : "1.2-2" }}
     </td>
   </ng-container>
@@ -135,16 +123,14 @@
       *matHeaderCellDef
       mat-sort-header="shootout"
       [matTooltip]="getTooltip('shootout')"
-      matTooltipPosition="above"
-    >
+      matTooltipPosition="above">
       Shootout
     </th>
     <td
       mat-cell
       *matCellDef="let player"
       [ngStyle]="getCellColors(player.shootout, 'shootout')"
-      class="small-column"
-    >
+      class="small-column">
       {{ player.shootout | percent }}
     </td>
   </ng-container>
@@ -153,14 +139,13 @@
   <tr
     mat-row
     *matRowDef="let player; columns: displayedColumns"
-    [routerLink]="['/', player.playerID, 'year', season]"
-  ></tr>
+    [routerLink]="['/', player.playerID, 'year', season]"></tr>
 </table>
 
 <mat-paginator
+  class="background"
   [pageSize]="20"
   [pageSizeOptions]="[20, 50, 100, 500]"
   [length]="dataSource.data.length"
-  showFirstLastButtons
-></mat-paginator>
-<ng-template #emptyState> </ng-template>
+  showFirstLastButtons></mat-paginator>
+<ng-template #emptyState></ng-template>
