--- a/src/app/leaderboard/skaters/skaters.component.scss
+++ b/src/app/leaderboard/skaters/skaters.component.scss
@@ -21,8 +21,19 @@
 
 .table-data {
   padding: 10px !important;
-  background-color: white;
+  background-color: var(--bgColor);
+  color: var(--textColor);
 }
+
+table td {
+  color: var(--textColor);
+}
+
+table th {
+  background-color: var(--bgColor);
+  color: var(--textColor);
+}
+
 .small-column {
   // leaderboard columns with numbers
   width: 115px;
@@ -35,7 +46,7 @@
   font-size: 15px;
 }
 
-.mat-mdc-row:hover {
+tr:hover {
   background-color: rgb(196, 191, 191) !important;
   cursor: pointer;
 }
