--- a/src/app/leaderboard/teams/teams.component.scss
+++ b/src/app/leaderboard/teams/teams.component.scss
@@ -21,7 +21,16 @@
 
 .table-data {
   padding: 10px !important;
-  background-color: white;
+  background-color: var(--bgColor);
+}
+
+table td {
+  color: var(--textColor);
+}
+
+table th {
+  background-color: var(--bgColor);
+  color: var(--textColor);
 }
 .small-column {
   // leaderboard columns with numbers
@@ -41,7 +50,7 @@
   font-size: 15px;
 }
 
-.mat-mdc-row:hover {
+tr:hover {
   background-color: rgb(196, 191, 191) !important;
   cursor: pointer;
 }
