Flipped order of toggle and label

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -135,6 +135,7 @@
         <mat-slide-toggle
           [(ngModel)]="isDarkMode"
           ngDefaultControl
+          labelPosition="before"
           (change)="toggleDarkMode()">
           <span style="color: white">Dark Mode</span>
         </mat-slide-toggle>
