--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -51,6 +51,12 @@
             [routerLink]="['/standings']">
             Standings
           </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary mobile-button"
+            [routerLink]="['/video']">
+            Video
+          </button>
           <a
             href="https://ko-fi.com/pierreanalytics"
             target="_blank"
@@ -117,6 +123,14 @@
               class="btn-outline-secondary normal-button"
               [routerLink]="['/standings']">
               Standings
+            </button>
+          </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn-outline-secondary normal-button"
+              [routerLink]="['/video']">
+              Video
             </button>
           </li>
           <li class="nav-item">
