--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -8,8 +8,7 @@
              teamCard: teamCard$ | async,
              standings: standings$ | async,
              roster: roster$ | async,
-            } as data"
-      >
+            } as data">
         <ng-container *ngIf="data.team as team">
           <ng-container *ngIf="data.teamCard as teamCard">
             <ng-container *ngIf="data.standings as standings">
@@ -24,8 +23,7 @@
                         <img
                           src="{{ 'assets/teams/' + team.teamName + '.png' }}"
                           alt="{{ team.teamName }} Logo"
-                          class="team-logo"
-                        />
+                          class="team-logo" />
                       </div>
                       <hr class="divide-line" />
                       <ul>
@@ -43,8 +41,7 @@
                           <div *ngFor="let rank of getRankList(teamCard)">
                             <div
                               class="team-badge"
-                              [style.background-color]="rank.color"
-                            >
+                              [style.background-color]="rank.color">
                               <i class="fa-solid fa-trophy"></i>
                               <br />
                               {{ rank.title }}
@@ -56,21 +53,20 @@
                   </mat-card>
                   <mat-card class="team-card border">
                     <mat-card-content style="margin-top: 3px">
-                      <mat-card-title class="roster-title"
-                        >{{ hyphenate(teamCard.season) }} Team
-                        Stats</mat-card-title
-                      >
+                      <mat-card-title class="roster-title">
+                        {{ hyphenate(teamCard.season) }} Team Stats
+                      </mat-card-title>
                       <ul>
                         <li>
-                          <strong>Games Played: </strong>
+                          <strong>Games Played:</strong>
                           {{ teamCard.gamesPlayed }}
                         </li>
                         <li>
-                          <strong>Record: </strong>
+                          <strong>Record:</strong>
                           {{ teamCard.wins }}-{{ teamCard.losses }}-{{
                             teamCard.otl
                           }}
-                          <strong>Last Ten: </strong>
+                          <strong>Last Ten:</strong>
                           {{ teamCard.l10Wins }}-{{ teamCard.l10Losses }}-{{
                             teamCard.l10Otl
                           }}
@@ -92,9 +88,9 @@
                           }}
                         </li>
                         <li>
-                          <strong>Goals For: </strong>
+                          <strong>Goals For:</strong>
                           {{ teamCard.gf }}
-                          <strong>| Goals Against: </strong>
+                          <strong>| Goals Against:</strong>
                           {{ teamCard.ga }}
                         </li>
                         <br />
@@ -123,8 +119,9 @@
                           <tr>
                             <td>xG%</td>
                             <td
-                              [ngStyle]="getBkgColor(teamCard.xGPercentageRank)"
-                            >
+                              [ngStyle]="
+                                getBkgColor(teamCard.xGPercentageRank)
+                              ">
                               {{ percentNumber(teamCard.xGPercentage, 2) }}%
                             </td>
                             <td>{{ getPostfix(teamCard.xGPercentageRank) }}</td>
@@ -167,9 +164,9 @@
                 <mat-card-title
                   class="roster-title"
                   [matTooltip]="getTooltip('roster')"
-                  matTooltipPosition="above"
-                  >NHL Roster</mat-card-title
-                >
+                  matTooltipPosition="above">
+                  NHL Roster
+                </mat-card-title>
                 <div class="roster-container">
                   <div class="roster-left row">
                     <ng-container *ngIf="forwards">
@@ -178,16 +175,14 @@
                       </mat-card-title>
                       <ng-container *ngFor="let forward of forwards">
                         <a
-                          [routerLink]="['/', forward.playerId, 'year', '2024']"
+                          [routerLink]="['/', forward.playerId, 'year', '2025']"
                           class="plain-link"
-                          style="color: secondaryColor"
-                        >
+                          style="color: secondaryColor">
                           <img
                             class="player-headshot"
                             style="margin-bottom: 2px"
                             src="{{ forward.headshot }}"
-                            alt="Player Image"
-                          />
+                            alt="Player Image" />
                           #{{ getSweaterNumber(forward.sweaterNumber) }}
                           {{ forward.fullName }} -
                           {{ getPlayerPosition(forward.positionCode) }}
@@ -208,15 +203,13 @@
                             '/',
                             defenseman.playerId,
                             'year',
-                            2024
+                            2025
                           ]"
-                          class="plain-link"
-                        >
+                          class="plain-link">
                           <img
                             class="player-headshot"
                             src="{{ defenseman.headshot }}"
-                            alt="Player Image"
-                          />
+                            alt="Player Image" />
                           #{{ getSweaterNumber(defenseman.sweaterNumber) }}
                           {{ defenseman.fullName }} -
                           {{ defenseman.shootsCatches
@@ -231,14 +224,12 @@
                       </mat-card-title>
                       <ng-container *ngFor="let goalie of goalies">
                         <a
-                          [routerLink]="['/', goalie.playerId, 'year', 2024]"
-                          class="plain-link"
-                        >
+                          [routerLink]="['/', goalie.playerId, 'year', 2025]"
+                          class="plain-link">
                           <img
                             class="player-headshot"
                             src="{{ goalie.headshot }}"
-                            alt="Goalie Image"
-                          />
+                            alt="Goalie Image" />
                           #{{ getSweaterNumber(goalie.sweaterNumber) }}
                           {{ goalie.fullName }} -
                           {{ goalie.shootsCatches }}
