--- a/src/app/leaderboard/skaters/skaters.component.html
+++ b/src/app/leaderboard/skaters/skaters.component.html
@@ -151,6 +151,23 @@
       {{ player.xG }}
     </td>
   </ng-container>
+  <ng-container matColumnDef="wpa">
+    <th
+      mat-header-cell
+      *matHeaderCellDef
+      mat-sort-header="wpa"
+      [matTooltip]="getTooltip('wpa')"
+      matTooltipPosition="above">
+      WPA
+    </th>
+    <td
+      mat-cell
+      *matCellDef="let player"
+      [ngStyle]="getCellColors(player.wpa, 'wpa')"
+      class="small-column">
+      {{ player.wpa }}
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr
