--- a/src/app/video/video.component.scss
+++ b/src/app/video/video.component.scss
@@ -9,9 +9,20 @@ button {
   color: aqua !important;
 }
 
+.table-wrapper {
+  display: flex;
+  align-items: stretch;
+}
+
 .video-player {
   margin: 20px auto;
   max-width: 100%;
+}
+
+.shot-table {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 table td {
@@ -27,4 +38,72 @@ tr {
 tr:hover {
   background-color: #3b3b3b !important;
   cursor: pointer;
+}
+
+.filter-container {
+  border: 1px solid #ccc;
+  padding: 16px;
+  border-radius: 8px;
+  max-width: 300px;
+  margin-right: 10px;
+  max-height: fit-content;
+  background-color: var(--bgColor);
+  flex: 0 0 auto;
+}
+
+.filter-form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.filter-input {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.filter-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-control {
+  padding: 8px;
+  font-size: 16px;
+  width: 100%;
+}
+
+.dropdown-search {
+  position: absolute;
+  display: inline-block;
+  z-index: 5;
+  width: inherit;
+  overflow: hidden;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--bgColor);
+  min-width: 230px;
+  border: 1px solid #ddd;
+}
+
+@media only screen and (max-width: 768px) {
+  .filter-container {
+    align-self: center;
+  }
+  .mdc-data-table__cell {
+    white-space: normal;
+    overflow: visible;
+  }
+
+  .table-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .filter-container {
+    margin-bottom: 16px;
+  }
 }
